testsuite/vir/error/error/compile/02_VIR.trieste
vbcc
VIR
(top
  {}
  (func
    (functionid 5:@main)
    (params)
    (i32)
    (vars)
    (labels
      (label
        (labelid 5:^main)
        (body
          (const
            (localid 2:$a)
            (i32)
            (int 2:99))
          (arrayrefconst
            (localid 4:$ref)
            (arg
              (argcopy)
              (localid 2:$a))
            (int 1:0)))
        (ret
          (localid 2:$a))))))
